--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue3-waterfalllayout",
-  "version": "1.0.0",
+  "name": "waterfall-v3",
+  "version": "1.0.1",
   "author": "Found-404",
   "main": "./dist/Waterfall-Vue3.umd.js",
   "module": "./dist/Waterfall-Vue3.mjs",
