--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "waterfall-v3",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "author": "Found-404",
-  "main": "./dist/Waterfall-Vue3.umd.js",
+  "main": "./dist/Waterfall-Vue3.mjs",
   "module": "./dist/Waterfall-Vue3.mjs",
   "files": [
     "dist"
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "terser": "^5.39.0",
-    "vite": "^6.2.4"
+    "vite": "^6.2.4",
+    "vite-plugin-css-injected-by-js": "^3.5.2"
   }
 }
